# ArkadyConcierge

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  logging_config.py  main.py  utils.py
app/api/: middleware.py  routes.py  schemas.py
app/bot/: breakdown_format.py  create.py  middlewares.py
app/bot/routers/: concierge.py  start.py
app/services/: ai_client.py  claude_token.py  concierge_service.py  openrouter_client.py  prompts.py
prompts/: concierge_breakdown.md
tests/: conftest.py  test_api.py  test_breakdown_format.py  test_concierge_service.py  test_escape_preview.py  test_logging_config.py  test_middlewares.py  test_utils.py
